Converting to eclipse projects